<resources>
    <string name="app_name">BilletBlaze</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_commsHub">Communication Hub</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="are_you_currently_under_evacuation_order">Are you currently under evacuation order?</string>
    <string name="do_you_require_any_additional_assitance">Do you require any additional assistance?</string>
    <string name="female">Female</string>
    <string name="city">City:</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="enter_address">Enter Address</string>
    <string name="address">Address:</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="age">Age:</string>
    <string name="payment">SELECT PAYMENT</string>
    <string name="enter_city">Enter City</string>
    <string name="name">Name:</string>
    <string name="enter_your_first_last_name">Enter your First/Last name</string>
    <string name="_1_000_000_000">+1 000–000–000</string>
    <string name="phone_number">Phone Number:</string>
    <string name="gender">Gender:</string>
    <string name="cryptoAddress">Address</string>
    <string name="_1234_5678_9012_3456">1234 5678 9012 3456</string>
    <string name="mm_yy">MM/YYYY</string>
    <string name="name_holder">Name Holder</string>
    <string name="nameInput">Name</string>
    <string name="coin">Coin</string>
    <string name="confirm_payment">CONFIRM PAYMENT</string>
    <string name="credit_card">Credit Card</string>
    <string name="_0xe6971a6561e4a1722d9294d02e94d1cca3390ab5">0xE6971A6561E4A1722D9294d02e94D1Cca3390AB5</string>
    <string name="cryptocurrency_eth_btc">Cryptocurrency (ETH/BTC)</string>
    <string name="cvv">CVV</string>
    <string name="this_security_code_appears_as_3_numbers_on_the_back_of_card">This security code appears as 3 numbers on the back of card.</string>
    <string name="expires_on">Expires On</string>
    <string name="select_one_method_of_payment">Select one method of payment:</string>
    <string name="paypal">PayPal</string>
    <string name="pay_with_paypal">Pay with PayPal:</string>
    <string name="security_code">Security Code</string>
    <string name="card_number_must_be_16_digits">Card number must be 16 digits</string>
    <string name="check_in_date">CHECK-IN DATE:</string>
    <string name="check_out_date">CHECK-OUT DATE:</string>
    <string name="billet_description">Billet Description</string>
    <string name="todo">TODO</string>
    <string name="billet_tittle">Billet Tittle</string>
    <string name="book_now">Book Now</string>
    <string name="price_per_night">Price (Per Night):</string>
    <string name="booking_id">Booking ID:</string>
    <string name="check_in_date2">Check-In Date:</string>
    <string name="check_out_date2">Check-Out Date:</string>
    <string name="i_agree_to_the_terms_and_services_of_billetblaze">I agree to the Terms and Services of BilletBlaze</string>
    <string name="todo2">TODO</string>
    <string name="number_of_guests">Number of Guests:</string>
    <string name="payment_method">Payment Method:</string>
    <string name="price_per_night2">Price (Per Night):</string>
    <string name="place_reservation">PLACE RESERVATION</string>
    <string name="selected_billet">SELECTED BILLET</string>
    <string name="home">HOME</string>
    <string name="manage_bookings">MANAGE BOOKINGS</string>
    <string name="final_price">Final Price:</string>

    <string-array name="cryptos">
        <item>BTC</item>
        <item>ETH</item>
    </string-array>

    <string-array name="bookings_spinner">
        <item>active</item>
        <item>inactive</item>
        <item>reviews</item>
    </string-array>

</resources>