<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.billetblaze.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_commsHub"
            app:destination="@id/navigation_commsHub" />
        <action
            android:id="@+id/action_navigation_home_to_manageFragment"
            app:destination="@id/manageFragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_host"
            app:destination="@id/navigation_host" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.billetblaze.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_findBillet"
            app:destination="@id/navigation_findBillet" />
        <action
            android:id="@+id/action_navigation_search_to_navigation_News"
            app:destination="@id/navigation_News" />
    </fragment>

    <fragment
        android:id="@+id/navigation_commsHub"
        android:name="com.example.billetblaze.ui.commsHub.CommsHubFragment"
        android:label="@string/title_commsHub"
        tools:layout="@layout/fragment_commshub" >
        <action
            android:id="@+id/action_navigation_commsHub_to_navigation_News"
            app:destination="@id/navigation_News" />
        <action
            android:id="@+id/action_navigation_commsHub_to_navigation_Messages"
            app:destination="@id/navigation_Messages" />
    </fragment>

    <fragment
        android:id="@+id/navigation_findBillet"
        android:name="com.example.billetblaze.ui.search.FindBilletFragment"
        android:label="Find a Billet"
        tools:layout="@layout/fragment_find_billet" >
        <action
            android:id="@+id/action_navigation_findBillet_to_navigation_searchResults"
            app:destination="@id/navigation_searchResults" />
    </fragment>

    <fragment
        android:id="@+id/navigation_searchResults"
        android:name="com.example.billetblaze.ui.search.SearchResultsFragment"
        android:label="Available Billets"
        tools:layout="@layout/fragment_search_results" >
        <action
            android:id="@+id/action_navigation_searchResults_to_navigation_BilletDetail"
            app:destination="@id/navigation_BilletDetail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_BilletDetail"
        android:name="com.example.billetblaze.ui.search.BilletDetailFragment"
        android:label="Billet Details"
        tools:layout="@layout/fragment_billet_detail" >
        <action
            android:id="@+id/action_navigation_BilletDetail_to_personalInfoFragment"
            app:destination="@id/personalInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/personalInfoFragment"
        android:name="com.example.billetblaze.ui.search.PersonalInfoFragment"
        android:label="Personal Information"
        tools:layout="@layout/fragment_personal_info" >
        <action
            android:id="@+id/action_personalInfoFragment_to_paymentFragment"
            app:destination="@id/paymentFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_News"
        android:name="com.example.billetblaze.ui.commsHub.NewsFragment"
        android:label="Wildfire News"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_Messages"
        android:name="com.example.billetblaze.ui.commsHub.ContactFragment"
        android:label="Contacts"
        tools:layout="@layout/fragment_contacts">
        <action
            android:id="@+id/action_navigation_Messages_to_messagesList"
            app:destination="@id/messagesList" />
    </fragment>
    <fragment
        android:id="@+id/manageFragment"
        android:name="com.example.billetblaze.ui.manage.ManageFragment"
        android:label="Manage Bookings"
        tools:layout="@layout/fragment_manage" >
        <action
            android:id="@+id/action_manageFragment_to_writereview"
            app:destination="@id/writereview" />
    </fragment>

    <fragment
        android:id="@+id/navigation_host"
        android:name="com.example.billetblaze.ui.host.HostFragment"
        android:label="Host Billets"
        tools:layout="@layout/fragment_host" />
    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.example.billetblaze.ui.search.PaymentFragment"
        android:label="Payment"
        tools:layout="@layout/fragment_payment" >
        <action
            android:id="@+id/action_paymentFragment_to_confirmationFragment"
            app:destination="@id/confirmationFragment" />
    </fragment>
    <fragment
        android:id="@+id/confirmationFragment"
        android:name="com.example.billetblaze.ui.search.ConfirmationFragment"
        android:label="Confirmation Summary"
        tools:layout="@layout/fragment_confirmation" >
        <action
            android:id="@+id/action_confirmationFragment_to_reservedFragment"
            app:destination="@id/reservedFragment" />
    </fragment>
    <fragment
        android:id="@+id/writereview"
        android:name="com.example.billetblaze.ui.manage.writereview"
        android:label="fragment_writereview"
        tools:layout="@layout/fragment_writereview" />
    <fragment
        android:id="@+id/messagesList"
        android:name="com.example.billetblaze.ui.commsHub.messageFragment"
        android:label="messages"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/reservedFragment"
        android:name="com.example.billetblaze.ui.search.ReservedFragment"
        android:label="Reservation Succesful"
        tools:layout="@layout/fragment_reserved">
        <action
            android:id="@+id/action_reservedFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_reservedFragment_to_manageFragment"
            app:destination="@id/manageFragment" />
    </fragment>


</navigation>